投稿内容を保存

--- a/app/views/targets/new.html.erb
+++ b/app/views/targets/new.html.erb
@@ -3,7 +3,7 @@
     <h3>目標を設定</h3>
     <%= form_with(model: @target, local: true) do |f| %>
 
-      <%# <%= render "shared/error_messages", model: f.object %>
+      <%= render "shared/error_messages", model: f.object %>
 
       <%# 目標設定 %>
       <div class="new-title">
@@ -56,8 +56,7 @@
         <%= f.text_area :future, class:"targets-text", id:"target-after", placeholder:"読書週間が身に付き、向上心を持って自己研鑽するようになっている。（必須 200文字まで)",rows:"4", maxlength:"200" %>
       
         <div class="weight-bold-text">
-          出品画像
-          <span class="indispensable">必須</span>
+          イメージ写真
         </div>
         <div class="click-upload">
           <p>
@@ -67,9 +66,9 @@
         </div>
 
         <%# 下部ボタン %>
-      <div class="traget-btn-contents">
-        <%= f.submit "投稿する" ,class:"target-btn" %>
-        <%=link_to 'もどる', root_path, class:"back-btn" %>
+        <div class="traget-btn-contents">
+          <%= f.submit "投稿する" ,class:"target-btn" %>
+          <%=link_to 'もどる', root_path, class:"back-btn" %>
       </div>
       <%# /下部ボタン %>
     <% end %>
