ビュー編集

--- a/app/views/targets/new.html.erb
+++ b/app/views/targets/new.html.erb
@@ -1,7 +1,10 @@
-<div class="contents row">
-  <div class="container">
-    <h3>目標を設定</h3>
-    <%= form_with(model: @target, local: true) do |f| %>
+<div class="targets-post-contents">
+  <header class="targets-post-header">
+
+  </header>
+  <div class="tragets-post-main">
+    <h3 class="targets-post-title">目標を設定</h3>
+    <%= form_with model: @target, url: targets_path, local: true do |f| %>
 
       <%= render "shared/error_messages", model: f.object %>
 
@@ -24,7 +27,8 @@
           <span class="indispensable">必須</span>
         </div>
         <div class='input-deadline-wrap'>
-          <%= raw sprintf(
+          <%= f.date_field :deadline %>
+          <%# <%= raw sprintf(
                       f.date_select(
                         :deadline,
                         class:'select-deadline',
@@ -45,7 +49,7 @@
 
         <div class="weight-bold-text">
           目標の人物
-          <span class="indispensable">必須</span>
+          <%# <span class="indispensable">必須</span> %>
         </div>
         <%= f.text_area :great_man, class:"targets-text", id:"target-longing", placeholder:"メンタリストDaigo（必須 40文字まで)", maxlength:"40" %>
 
