--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -8,6 +8,14 @@
   min-width: 500px;
 }
 
+.target-edit-btn {
+  text-decoration: none;
+}
+
+.target-delete-btn {
+  text-decoration: none;
+}
+
 
 
 /* 共通 */
@@ -95,4 +103,50 @@
   color: #fff;
   padding: 15px 35%;
   text-decoration: none;
+}
+
+/* モーダルウインドウ */
+.modalOpen, .modalClose {
+  cursor: pointer;
+}
+
+
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(.95);
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  min-width: 200px;
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.modal.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  z-index: 1;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.mask.active {
+  opacity: 0.7;
+  visibility: visible;
 }
