削除機能の表示

--- a/app/views/targets/show.html.erb
+++ b/app/views/targets/show.html.erb
@@ -34,5 +34,18 @@
 
   <% if user_signed_in? && current_user.id == @target.user_id %>
     <%= link_to "編集", edit_target_path(@target.id), method: :get, class: "target-edit-btn" %>
+    
+    <a id="modalOpen" class="modalOpen">削除</a>
+    <%# <%= link_to "削除", target_path(@target.id), method: :delete, class: "target-delete-btn" %>
+  
+    <div class="modal" id="modal">
+      <h3>削除しますか？</h3>
+        <div class="modalContents">
+          <%= link_to "削除する", target_path(@target.id), method: :delete, class: "target-delete-btn" %><br>
+          <%# <%= link_to 'もどる', target_path(@target.id), class:"" %>
+          <a id="modalClose" class="modalClose">削除しない</a>
+        </div>
+    </div>
+    <div class="mask" id="mask"></div>
   <% end %>
 </div>
