--- a/app/assets/stylesheets/user/session.css
+++ b/app/assets/stylesheets/user/session.css
@@ -1,4 +1,5 @@
-body {
+
+.wallpaper {
   width: 100vw;
   height: 100vh;
   margin: 0;
@@ -115,13 +116,18 @@ h1 {
 }
 
 /* ヘッダー */
+.header__bar_row {
+ background-color: #cde4ff;
+}
 .grid-1 {
   font-size: 50px;
+  margin: auto;
+  padding: auto;
 }
 
 .grid-2 {
   text-align: right;
-  padding-right: 20px;
+  flex-direction: row;
 }
 
 .post {
