--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,42 @@
-<div class="signin-form">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= image_tag 'man.png', class: "logo-a" %>
-    <h1>新規登録</h1>
-    <%= render "devise/shared/error_messages", resource: resource %>
+<div class="wallpaper">
+  <div class="signin-form">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= image_tag 'man.png', class: "logo-a" %>
+      <h1>新規登録</h1>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-      <%= f.label :名前 %><br />
-      <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-    </div>
-    
-    <div class="field">
-      <%= f.label :Eメールアドレス %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
+      <div class="field">
+        <%= f.label :名前 %><br />
+        <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+      </div>
+      
+      <div class="field">
+        <%= f.label :Eメールアドレス %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
 
-    <div class="field">
-      <%= f.label :パスワード %>
-      <% if @minimum_password_length %>
-      <em>（最低6文字以上）</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
+      <div class="field">
+        <%= f.label :パスワード %>
+        <% if @minimum_password_length %>
+        <em>（最低6文字以上）</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
 
-    <div class="field">
-      <%= f.label :パスワード %><em>（確認用）</em><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
+      <div class="field">
+        <%= f.label :パスワード %><em>（確認用）</em><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
 
-    <div class="actions">
-      <%= f.submit "登録", class: "sign-btn"%>
-    </div>
+      <div class="actions">
+        <%= f.submit "登録", class: "sign-btn"%>
+      </div>
 
-    <%- if controller_name != 'sessions' %>
-      <%= link_to "ログインページはこちら", new_session_path(resource_name) %><br />
+      <%- if controller_name != 'sessions' %>
+        <%= link_to "ログインページはこちら", new_session_path(resource_name) %><br />
+      <% end %>
+
     <% end %>
-
-  <% end %>
+  </div>
+  <%# <%= render "devise/shared/links" %> 
 </div>
-<%# <%= render "devise/shared/links" %> 
