--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
 
   <body>
      <header class="header">
-      <div class="header__bar row">
+      <div class="header__bar_row">
         <h1 class="grid-1"><a href="/">Grow up me</a></h1>
         <% if user_signed_in? %>
-          <div class="user_nav grid-2">
+          <div class="grid-2">
             <%= link_to "投稿する", new_target_path, class: "post" %>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "post" %>
           </div>
