投稿機能の編集

--- a/app/views/targets/edit.html.erb
+++ b/app/views/targets/edit.html.erb
@@ -15,13 +15,12 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_area :title, class:"targets-text", id:"target-name", placeholder:"例）今月5冊読書する（必須 40文字まで)", maxlength:"40" %>
-
         <div class="weight-bold-text">
           分野
         </div>
         <%= f.collection_select(:genre_id, Genre.all, :id, :name, {}, {class:"select-box", id:"target-genre"}) %>
 
-        <div class='form-text-wrap'>
+        <div class='weight-bold-text'>
           <label class="form-text">期日</label>
           <span class="indispensable">必須</span>
         </div>
