--- a/app/assets/stylesheets/user/session.css
+++ b/app/assets/stylesheets/user/session.css
@@ -141,4 +141,11 @@ h1 {
   padding: 5px 5px;
   border-radius: 5%;
   font-weight: bold;
+  border-radius: 10px;
+}
+
+.post:hover {
+  background-color: purple;
+  color: #fff;
+  transition: 0.2s;
 }
