--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -2,6 +2,9 @@
   display: flex;
 }
 
+.li:hover{
+  background-color: #cde4ff;
+}
 .left {
   min-height: 100vh;
   width: 25%;
@@ -20,11 +23,19 @@
   margin: 10px;
 }
 
+.title-only {
+  
+}
+
 .title_check {
   margin-left: 10px;
 }
 
-.content_post {
+.title_check:hover{
+  color: red;
+}
+
+.content_post:hover {
   padding: 5px;
 }
 
@@ -68,14 +79,21 @@
   padding: 0 10px;
 }
 
+.target-new:hover {
+  background-color: purple;
+  transition: 0.2s;
+}
 .target-btn-text {
   color: #fff;
   display: block;
   font-size: 25px;
   text-decoration: none;
-  /* margin-bottom: 5px; */
 }
 
 .target-btn-icon {
   width: 80%;
+}
+
+a { 
+  text-decoration: none;
 }
