画像の配置変更

--- a/app/assets/stylesheets/user/session.css
+++ b/app/assets/stylesheets/user/session.css
@@ -4,7 +4,7 @@
   height: 100vh;
   margin: 0;
   padding: 0;
-  background-image: url("beach.jpg");
+  background-image: url(../../images/run.jpg);
   background-repeat: no-repeat;
   font-family: sans-serif;
   background-size: cover;
