--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="wallpaper">
+<%= image_tag 'beach.jpg', class: "wallpaper" %>
   <div class="signin-form">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= image_tag 'man.png', class: "logo-a" %>
@@ -39,4 +39,3 @@
     <% end %>
   </div>
   <%# <%= render "devise/shared/links" %> 
-</div>
