--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,16 @@
         <% if user_signed_in? %>
           <div class="grid-2">
             <%= link_to "投稿する", new_target_path, class: "post" %>
-            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "post" %>
+            <% if current_page?(user_path(current_user.id))%>
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "post"%>
+            <% else %>
+              <%= link_to "マイページ", user_path(current_user.id), class: "post" %>
+            <% end %>
+            <%# <%= link_to current_user.name, user_path(current_user.id), id: "userpost", class: "post" %>
+            <%# <ul class="usermodal hidden" id="pull-down">
+              <><%= link_to "マイページ", user_path(current_user.id), class: "post" %>
+              <%# <><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "post"%>
+            <%# </ul> %>
           </div>
         <% else %>
           <div class="grid-2">
