--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -2,9 +2,6 @@
   display: flex;
 }
 
-.li:hover{
-  background-color: #cde4ff;
-}
 .left {
   min-height: 100vh;
   width: 25%;
@@ -24,7 +21,7 @@
 }
 
 .title-only {
-  
+  text-align: center;
 }
 
 .title_check {
@@ -35,11 +32,6 @@
   color: red;
 }
 
-.content_post:hover {
-  padding: 5px;
-}
-
-
 .rigth {
   flex: 1;
   width: 700px;
@@ -49,13 +41,14 @@
 
 .li {
   padding: 8px 19px;
-  margin: 0;
   color: #2c2c2f;
-  /* background: #cde4ff; */
   border-top: solid 5px #5989cf;
   border-bottom: solid 5px #5989cf;
 }
 
+.li:hover{
+  background-color: #cde4ff;
+}
 
 .rigth-title {
   font-weight: bold;
@@ -96,4 +89,16 @@
 
 a { 
   text-decoration: none;
+}
+
+.byusername {
+  margin: ;
+  padding: 10px 10px;
+}
+
+.byusername:hover {
+  background-color: #fff;
+  transition: 0.2s;
+  border-radius: 15%;
+  text-decoration: underline;
 }
