--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,25 +6,25 @@
       <%= render "devise/shared/error_messages", resource: resource %>
 
       <div class="field">
-        <%= f.label :名前 %><br />
+        <%= f.label :name %><br />
         <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
       </div>
       
       <div class="field">
-        <%= f.label :Eメールアドレス %><br />
+        <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
 
       <div class="field">
-        <%= f.label :パスワード %>
+        <%= f.label :password %>
         <% if @minimum_password_length %>
-        <em>（最低6文字以上）</em>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "new-password" %>
       </div>
 
       <div class="field">
-        <%= f.label :パスワード %><em>（確認用）</em><br />
+        <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
       </div>
 
