結合テスト完了

--- a/app/views/targets/edit.html.erb
+++ b/app/views/targets/edit.html.erb
@@ -78,7 +78,7 @@
     
         <%# 下部ボタン %>
         <div class="traget-btn-contents">
-          <%= f.submit "投稿する" ,class:"target-btn" %>
+          <%= f.submit "編集する" ,class:"target-btn" %>
           <%=link_to 'もどる', target_path(@target.id), class:"back-btn" %>
         </div>
       <%# /下部ボタン %>
